feat: add bootstrap project