@@ -1,11 +1,10 @@
 plugins {
-    id("application")
+    id("java-library")
     id("org.openjfx.javafxplugin") version "0.1.0"
 }
 
 dependencies {
     implementation(project(":application"))
-    implementation(project(":infrastructure"))
 
     runtimeOnly("ch.qos.logback:logback-classic:1.5.32")
 
@@ -15,14 +14,6 @@ dependencies {
 
     // Routing
     implementation("com.github.rahulstech:javafx-routing:2.0.0")
-}
-
-application {
-    mainClass.set("com.triplify.ui.MainApp")
-    applicationDefaultJvmArgs = listOf(
-        "--enable-native-access=javafx.graphics",
-        "--enable-native-access=ALL-UNNAMED"
-    )
 }
 
 javafx {
